# EasyPal-Next

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: release-windows.yml
config/: defaults.yaml
docs/: codec2-windows-setup.md  hamdrm-dll.md  hybrid-api-v1.md  on-air-test.md  original-easypal-feature-matrix.md  sync-leds.md  validation-log.md  wftxt-parity.md
docs/architecture/: community-api.openapi.yaml
native/: README.md
native/hamdrm-dll/: CMakeLists.txt  hamdream_dll.dsp  hamdream_dll.dsw  hamdrm.cpp  hamdrm.h
native/hamdrm-dll/common/: Buffer.h  DRMSignalIO.cpp  DRMSignalIO.h  Data.cpp  Data.h  DrmReceiver.cpp  DrmReceiver.h  DrmTransmitter.cpp  DrmTransmitter.h  GlobalDefinitions.h  Modul.h  OFDM.h  Parameter.h  TransmitterFilter.h  Vector.h  bsr.cpp  bsr.h  ptt.cpp
native/hamdrm-dll/common/chanest/: ChannelEstimation.h
native/hamdrm-dll/common/datadecoding/: DABMOT.cpp  DABMOT.h  DataDecoder.cpp  DataDecoder.h  MOTSlideShow.cpp  MOTSlideShow.h  picpool.cpp
native/hamdrm-dll/common/interleaver/: SymbolInterleaver.h
native/hamdrm-dll/common/libs/: callsign.cpp  poolid.h
native/hamdrm-dll/common/matlib/: MatlibStdToolbox.h
native/hamdrm-dll/common/mlc/: ConvEncoder.cpp
native/hamdrm-dll/common/resample/: Resample.cpp
native/hamdrm-dll/common/sourcedecoders/: AudioSourceDecoder.cpp  AudioSourceDecoder.h
native/hamdrm-dll/common/sync/: FreqSyncAcq.cpp  FreqSyncAcq.h  SyncUsingPil.h
native/hamdrm-dll/common/tables/: TableDRMGlobal.h
native/hamdrm-dll/compat/: fftw2_compat.cpp  fftw2_compat.h
native/hamdrm-dll/sound/: Sound.cpp  Sound.h
packaging/windows/: README.md  build.ps1  easypal-next.iss  easypal-next.spec
packaging/windows/redist/: README.md
resources/brand/: README.md
scripts/: add-firewall-rule.bat  build-hamdrm-x64.sh  fetch-libcodec2.py  find-hamdrm.py  loopback-transfer.py  setup-dev.bat  vbcable-loopback.py  verify-codec2.py  verify-hamdrm.py
src/easypal_next/: __init__.py  __main__.py
src/easypal_next/app/: application.py  bootstrap.py  paths.py
src/easypal_next/audio/: engine.py  modem_bridge.py  resampler.py  sounddevice_engine.py  waterfall_tap.py
src/easypal_next/community/: client.py  ftp_client.py  hybrid.py  null_client.py  rest_client.py
src/easypal_next/config/: loader.py  schema.py
src/easypal_next/core/: events.py  session.py  station_log.py  transfer_engine.py
src/easypal_next/fec/: decoder.py  encoder.py  file_assembler.py  meta_codec.py  packet.py
src/easypal_next/modem/: callsign_tx.py  ctypes_backend.py  ctypes_bindings.py  cw_id.py  embed_txt.py  factory.py  framer.py  freedv_backend.py  hamdrm_api.py  hamdrm_backend.py  interface.py  modes.py  qrm_gate.py  transfer_backend.py  tx_image.py
src/easypal_next/network/: gallery_store.py  gallery_subprocess.py  server.py  util.py  websocket_hub.py
src/easypal_next/network/api/: routes.py  schemas.py
src/easypal_next/network/static/: index.html
src/easypal_next/network/static/css/: gallery.css
src/easypal_next/network/static/js/: gallery.js
src/easypal_next/radio/: cat_hamlib.py  controller.py  factory.py  serial_ports.py  serial_ptt.py  vox_manual.py
src/easypal_next/ui/: main_window.py  menus.py  qsl_compose.py  session_relay.py  spectrum_relay.py  sync_status_relay.py  theme.py  waterfall_colormap.py
src/easypal_next/ui/styles/: app.qss  dark.qss  light.qss
src/easypal_next/ui/view_models/: transfer_vm.py
src/easypal_next/ui/widgets/: log_panel.py  pic_qsl_dialog.py  rx_pane.py  settings_dialog.py  spectrum_strip.py  station_log_dialog.py  sync_status_strip.py  waterfall_canvas.py  waterfall_text_editor.py  waterfall_widget.py
src/easypal_next/waterfall/: cue_wav.py  decoder.py  encoder.py  painter.py  presets.py  text_renderer.py  tx_pcm.py  user_wave_files.py  wav_store.py  winmm_play.py
tests/fixtures/wftxt_goldens/: compare.json
tests/integration/: conftest.py  test_modem_loopback.py  test_transfer_loopback.py
tests/unit/: test_audio_carry.py  test_auto_rx.py  test_easypal_features.py  test_fec.py  test_gallery_store.py  test_gallery_urls.py  test_hamdrm.py  test_hamdrm_gallery_teardown.py  test_hamdrm_spectrum_callsign.py  test_hamdrm_wftxt.py  test_live_waterfall.py  test_meta_codec.py  test_modem_bindings.py  test_modem_framer.py  test_packet_framer.py  test_paths.py  test_radio_factory.py  test_resampler.py  test_spectrum_filter.py  test_spectrum_relay.py  test_sync_leds.py  test_tune.py  test_tx_image.py  test_waterfall_canvas.py  test_waterfall_colormap.py  test_waterfall_encoder.py  test_waterfall_level.py  test_waterfall_tap.py  test_wftxt_parity.py
